ssl/nginx-ingress-2.yaml
  GNU nano 4.8                                         nginx-ingress-2.yaml                                                    
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - playlistingpro.store
    secretName: microbot-ingress-tls
  rules:
  - host: playlistingpro.store
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: wordpress
            port:
              number: 80
